--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.0",
     "nodemon": "^1.13.2",
     "serve-favicon": "~2.4.5",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "websocket": "^1.0.25"
   }
 }
